# SeQuant

./: .gitignore  Dockerfile  README.md  __init__.py  benchmark_data_preprocessing.py  pyproject.toml  requirements.txt  set_up_env.py  test.py
SeQuant/: README.md
app/: __init__.py  functions.py  sequant_main.py  sequant_server.py  sequant_tools.py  sq_dataclasses.py
app/becnhmarking/: benchmarking_embeddings.ipynb  classification.py  classification_hemolysis.py  classification_nonfouling.py  readme.md  regression.py
app/becnhmarking/pybiomed/: pbm_classification.py  pbm_regression.py
app/becnhmarking/sequant/: classification_hemolysis.py  classification_nonfouling.py  db_classification.py  phys_chem_prop.py  regression.py
app/learning/: autoencoder.py  autoencoder_learning.py  autoencoder_preset_tools.py
app/pipline/: DBAASP_size.csv  test_antiox.py  test_toxic.py
app/pipline/data_preprocessing/: AMP_preprocessing.py  DBAASP_preprocessing.py
app/utils/: conctants.py  descriptors.json  descriptors_scaler.pkl  predict_utils.py
app/utils/data/: AMP.csv  AMP_ADAM2.txt  DBAASP.csv  SPENCER_ORF_protein_sequence.txt  antidia.csv  antiox.csv  readme.md
app/utils/descriptors/: dna_descriptors.json  protein_descriptors.json  rna_descriptors.json
app/utils/models/aptamers/: keras_metadata.pb  saved_model.pb
app/utils/models/nucleic_acids/: keras_metadata.pb  (+1 more)
data/: antiinf.csv  antimic.csv  antiox.csv  energy_data.csv  regression.csv  small_test_df.csv
evaluation/: 31.ipynb
test/: databases_attempt.py  latent_representations_overview.py  test.py
(+7 files in other folders)
